<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity"
    android:orientation="vertical"
    android:background="@color/special">

    <ImageView
        android:id="@+id/recipeImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundTint="@color/black"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        android:padding="4dp">
    </ImageView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recipeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details_title"
                    android:textSize="24sp"
                    android:textColor="@color/purple_200"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:layout_marginStart="5dp">
                </TextView>

                <TextView
                    android:id="@+id/recipeSource"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/special_purple"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/details_source">
                </TextView>

                <TextView
                    android:id="@+id/recipeLikes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/special_blue"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:padding="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/details_likes">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details_ingredients"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:layout_marginStart="5dp"
                    android:textStyle="bold"
                    android:textSize="16sp">
                </TextView>

                <GridView
                    android:id="@+id/ingredients_listview"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/recipeScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details_score"
                    android:textSize="17sp"
                    android:textColor="@color/purple_200"
                    android:layout_marginStart="5dp"
                    android:textStyle="bold"
                    android:padding="5dp">
                </TextView>

                <TextView
                    android:id="@+id/recipeServings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details_servings"
                    android:textSize="17sp"
                    android:textColor="@color/purple_200"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:padding="5dp">
                </TextView>

                <TextView
                    android:id="@+id/recipePrep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details_prep"
                    android:textSize="17sp"
                    android:textColor="@color/purple_200"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:padding="5dp">
                </TextView>

                <Button
                    android:id="@+id/recipeButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:drawableLeft="@android:drawable/ic_menu_view"
                    android:text="@string/details_button">
                </Button>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>